# sentinel

./: package-lock.json  package.json
backend/: .gitignore  alembic.ini  api.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/alembic/versions/: 03009147bb8f_initial_migration.py  14ba81d6e303_description_of_changes.py  173aa8da933c_description_of_changes.py  3ccd53f981ee_initial_migration.py  8f61acc72dc8_your_migration_message.py  9cfabf1a96bb_description_of_the_change.py  ce41dd8a0d69_initial_migration.py  ed0aff52a4a5_your_migration_message.py
backend/api/: database.py  models.py  report_router.py  schedule_router.py  schemas.py  user_router.py
backend/api/util/: email_verify.py  maps_util.py  read_schedule.py  school_data.py
backend/routers/: user_router.py
frontend/: app.json  env.d.ts  find.js  package-lock.json  package.json
frontend/app/: _layout.tsx  exposure.tsx  future-exposure.tsx  index.tsx  map.tsx  schedule.tsx  self-report.tsx
frontend/app/(tabs)/: _layout.tsx  explore.tsx
frontend/util/: apiClient.ts
